--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,37 @@
   "private": true,
   "proxy": "http://localhost:8000",
   "dependencies": {
+    "axios": "^0.18.0",
+    "browser-sync": "^2.26.3",
+    "css-loader": "^2.1.0",
+    "fancy-log": "^1.3.3",
+    "file-loader": "^3.0.1",
+    "growl": "1.10.0",
+    "gulp-livereload": "^4.0.1",
+    "gulp-rename": "^1.4.0",
+    "history": "^4.9.0",
+    "mapbox-gl": "^0.53.1",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-facebook-pixel": "^0.1.2",
+    "react-fontawesome": "^1.6.1",
+    "react-ga": "^2.5.7",
+    "react-geocode": "^0.1.2",
+    "react-mapbox-gl": "^4.2.0",
+    "react-moment": "^0.8.4",
+    "react-redux": "^6.0.0",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
+    "redux": "^4.0.1",
+    "redux-axios-middleware": "^4.0.0",
+    "redux-thunk": "^2.3.0",
+    "run-sequence": "^2.2.1",
+    "style-loader": "^0.23.1",
+    "styled-components": "^4.1.3",
+    "webpack": "4.29.6",
+    "webpack-stream": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
