--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-    "name": "events-map-for-all",
-    "version": "1.0.0",
-    "main": "index.js",
-    "repository": "",
-    "author": "Rapi Castillo",
-    "license": "MIT",
-    "private": false,
-    "scripts": {
-      "heroku-prebuild": "NODE_ENV=production cd frontend/ && yarn install && yarn build && cd .."
-    },
-    "cacheDirectories": [
-      "frontend/node_modules"
-    ]
+  "name": "events-map-for-all",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "",
+  "author": "Rapi Castillo",
+  "license": "MIT",
+  "private": false,
+  "scripts": {
+    "heroku-prebuild": "NODE_ENV=production cd frontend/ && yarn install && yarn build && cd .."
+  },
+  "cacheDirectories": [
+    "frontend/node_modules"
+  ],
+  "dependencies": {}
 }
-  
-  
