--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,16 +17,17 @@
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
     "react-facebook-pixel": "^0.1.2",
     "react-fontawesome": "^1.6.1",
     "react-ga": "^2.5.7",
     "react-geocode": "^0.1.2",
+    "react-helmet": "^5.2.1",
     "react-mapbox-gl": "^4.2.0",
     "react-moment": "^0.8.4",
     "react-redux": "^6.0.0",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
+    "react-scripts": "3.0.1",
     "redux": "^4.0.1",
     "redux-axios-middleware": "^4.0.0",
     "redux-thunk": "^2.3.0",
