--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
-  "name": "Start on Heroku: Python",
-  "description": "A barebones Python app, which can easily be deployed to Heroku.",
+  "name": "Event Maps for All",
+  "description": "A map to show your events",
   "image": "heroku/python",
-  "repository": "https://github.com/heroku/python-getting-started",
+  "repository": "https://github.com/rapicastillo/event-maps-for-all",
   "keywords": ["python", "django" ],
-  "addons": [ "heroku-postgresql" ],
+  "addons": [ "scheduler", "jawsdb"],
   "env": {
-    "SECRET_KEY": {
-      "description": "The secret key for the Django application.",
+    "DISABLE_COLLECTSTATIC": {
+      "description": "Set this to 1",
       "generator": "secret"
     }
   },
